# MegBA

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  README.md  vcpkg.json
cmake/: libraryConfig.cmake.in
examples/: 1dsfm_Double.cpp  BAL_Double.cpp  BAL_Double_analytical.cpp  BAL_Double_analytical_implicit.cpp  BAL_Double_implicit.cpp  BAL_Float.cpp  BAL_Float_analytical.cpp  CMakeLists.txt
include/: Common.h  Macro.h  Wrapper.hpp  common.h  macro.h  wrapper.hpp
include/algo/: LM_algo.h  algo_dispatcher.h  base_algo.h  lm_algo.h  schurLM_algo.h
include/edge/: BaseEdge.h  base_edge.h
include/geo/: Geo.cuh  geo.cuh
include/linear_system/: LM_linear_system.h  base_linear_system.h  implicit_schur_LM_linear_system.h  implicit_schur_linear_system.h  linear_system_dispatcher.h  schurLM_linear_system.h  schur_LM_linear_system.h  schur_linear_system.h
include/linear_system_manager/: LM_linear_system_manager.h  base_linear_system_manager.h  linear_system_manager_dispatcher.h  schurLM_linear_system_manager.h
include/operator/: JetVector.h  JetVector.inl  Jet_Vector_math.inl  Thrust_Transform.h  eigen_injector.h  jet_vector-inl.h  jet_vector.h  jet_vector_math_impl.cuh  jet_vector_math_impl.h  jet_vector_op-inl.h  math_function_Jet_Vector_CPU.h  math_function_Jet_Vector_CUDA.cuh
include/problem/: BaseProblem.h  HEntrance.h  base_problem.h  hessian_entrance.h
include/resource/: Manager.h  MemoryPool.h  Memory_Pool.h  handle_manager.h  memory_pool.h
include/solver/: base_solver.h  implicit_schur_pcg_solver.h  pcg_solver.h  schur_distributed_pcg_solver.h  schur_pcg_solver.h  schur_solver.h  solver_dispatcher.h
include/vertex/: BaseVertex.h  SE2_Vertex.h  SE2_vertex.h  base_vertex.h
src/: CMakeLists.txt
src/algo/: CMakeLists.txt  LM_algo.cpp  base_algo.cpp  lm_algo.cpp  lm_algo.cu  schurLM_algo.cpp
src/edge/: BaseEdge.cpp  CMakeLists.txt  Edge_Vector.cu  base_edge.cpp  base_edge.cu  build_implicit_linear_system.cu  build_linear_system.cu  update.cu
src/geo/: AngleAxis.cu  CMakeLists.txt  Distortion.cu  Quaternion.cu  Rotation2D.cu  analytical_derivatives.cu  angle_axis.cu  distortion.cu  quaternion.cu  rotation2D.cu
src/linear_system/: CMakeLists.txt  LM_linear_system.cpp  LM_linear_system.cu  base_linear_system.cpp  base_linear_system.cu  implicit_schur_LM_linear_system.cpp  implicit_schur_LM_linear_system.cu  implicit_schur_linear_system.cpp  implicit_schur_linear_system.cu  schurLM_linear_system.cpp  schurLM_linear_system.cu  schur_LM_linear_system.cpp  schur_LM_linear_system.cu  schur_linear_system.cpp  schur_linear_system.cu
src/linear_system_manager/: CMakeLists.txt  schurLM_linear_system_manager.cpp  schurLM_linear_system_manager.cu
src/operator/: CMakeLists.txt  JetVector.cpp  JetVector.cu  jet_vector.cpp  jet_vector.cu  jet_vector_math_impl.cpp  jet_vector_math_impl.cu  math_function_Jet_Vector_CPU.cpp  math_function_Jet_Vector_CUDA.cu
src/problem/: BaseProblem.cpp  BaseProblem.cu  Base_Problem.cu  CMakeLists.txt  base_problem.cpp  base_problem.cu  build_linear_system.cu  linear_solver.cpp  make_H_and_g.cu  solve_Linear.cu  solve_linear.cu  update.cu
src/resource/: CMakeLists.txt  Manager.cpp  MemoryPool.cu  Memory_Pool.cu  handle_manager.cpp  memory_pool.cu
src/solver/: CMakeLists.txt  base_solver.cpp  implicit_schur_pcg_solver.cpp  implicit_schur_pcg_solver.cu  schur_distributed_pcg_solver.cu  schur_pcg_solver.cpp  schur_pcg_solver.cu
src/vertex/: CMakeLists.txt  SE2_Vertex.cpp  SE2_Vertex.cu  SE2_vertex.cpp  SE2_vertex.cu
