add_executable(BAL_Double BAL_Double.cpp)
target_link_libraries(BAL_Double base_problem base_edge jet_vector geo)
target_link_libraries(BAL_Double lm_algo schur_LM_linear_system schur_pcg_solver ${gflags_LIBRARIES})

add_executable(BAL_Float BAL_Float.cpp)
target_link_libraries(BAL_Float base_problem base_edge jet_vector geo)
target_link_libraries(BAL_Float lm_algo schur_LM_linear_system schur_pcg_solver ${gflags_LIBRARIES})

add_executable(BAL_Double_analytical BAL_Double_analytical.cpp)
target_link_libraries(BAL_Double_analytical base_problem base_edge jet_vector geo)
target_link_libraries(BAL_Double_analytical lm_algo schur_LM_linear_system schur_pcg_solver ${gflags_LIBRARIES})

add_executable(BAL_Float_analytical BAL_Float_analytical.cpp)
target_link_libraries(BAL_Float_analytical base_problem base_edge jet_vector geo)
target_link_libraries(BAL_Float_analytical lm_algo schur_LM_linear_system schur_pcg_solver ${gflags_LIBRARIES})
